--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-node_modules
-# Keep environment variables out of version control
+node_modules/
 .env
-
-/generated/prisma
+prisma/dev.db
+*.log
+.DS_Store
