--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/server/index.js",
-    "start": "node src/server/index.js",
+    "start": "npx prisma migrate deploy && node src/server/index.js",
     "generate": "npx prisma generate",
     "migrate:dev": "prisma migrate dev",
     "studio": "prisma studio"
